# cse-111-emulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  readme.md  report.md
.github/: build-check.yaml
.github/workflows/: build-check.yaml  build.yml  clang-format-check.yaml  clang-tidy-check.yaml  gen-report.yaml  prettier-format-check.yaml  release.yaml  tests.yaml
helper_tools/: opcode_analyzer.py
report/: report.md
src/: CMakeCache.txt  Makefile  banana.png.h  banana_emulator  banana_memory.cpp  banana_memory.h  bit_definitions.h  cmake_install.cmake  compile_commands.json  console.cpp  console.h  controller.cpp  controller.h  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  emulator  filter.cpp  filter.h  git-error-1739416828660  gpu.cpp  gpu.h  gui.cpp  gui.h  main.cpp  memory.cpp  memory.h  os.cpp  os.h  reg_file.cpp  vr.cpp  vr.h
wxWidgets-3.2.2/build_gtk/: Makefile  config.status  version-script  wx-config
wxWidgets-3.2.2/build_gtk/.deps/: advdll_dummy.o.d  auidll_auibar.o.d  auidll_auibook.o.d  auidll_dockart.o.d  auidll_floatpane.o.d  auidll_framemanager.o.d  auidll_tabart.o.d  auidll_tabmdi.o.d  auidll_xh_aui.o.d  auidll_xh_auitoolb.o.d  basedll_any.o.d  basedll_appbase.o.d  basedll_appunix.o.d  basedll_arcall.o.d  basedll_arcfind.o.d  basedll_archive.o.d  basedll_arrstr.o.d  basedll_base64.o.d  basedll_clntdata.o.d  basedll_cmdline.o.d  basedll_common_secretstore.o.d  basedll_common_uilocale.o.d  basedll_config.o.d  basedll_convauto.o.d  basedll_datetime.o.d  basedll_datetimefmt.o.d  basedll_datstrm.o.d  basedll_dircmn.o.d  basedll_dlunix.o.d  basedll_dynlib.o.d  basedll_dynload.o.d  basedll_encconv.o.d  basedll_epolldispatcher.o.d  basedll_event.o.d  basedll_evtloopcmn.o.d  basedll_evtloopunix.o.d  basedll_extended.o.d  basedll_fdiodispatcher.o.d  basedll_fdiounix.o.d  basedll_ffile.o.d  (+557 more)
wxWidgets-3.2.2/build_gtk/demos/bombs/: Makefile
wxWidgets-3.2.2/build_gtk/demos/forty/: Makefile
wxWidgets-3.2.2/build_gtk/demos/fractal/: Makefile
wxWidgets-3.2.2/build_gtk/demos/life/: Makefile
wxWidgets-3.2.2/build_gtk/demos/poem/: Makefile
wxWidgets-3.2.2/build_gtk/lib/: libwx_baseu-3.2.so.0  libwx_baseu-3.2.so.0.2.0  libwx_baseu_net-3.2.so.0  libwx_baseu_net-3.2.so.0.2.0  libwx_baseu_xml-3.2.so.0  libwx_baseu_xml-3.2.so.0.2.0  libwx_gtk3u_adv-3.2.so.0  libwx_gtk3u_adv-3.2.so.0.2.0  libwx_gtk3u_aui-3.2.so.0  libwx_gtk3u_aui-3.2.so.0.2.0  libwx_gtk3u_core-3.2.so.0  libwx_gtk3u_gl-3.2.so.0  libwx_gtk3u_gl-3.2.so.0.2.0  libwx_gtk3u_html-3.2.so.0  libwx_gtk3u_html-3.2.so.0.2.0  libwx_gtk3u_media-3.2.so.0  libwx_gtk3u_media-3.2.so.0.2.0  libwx_gtk3u_propgrid-3.2.so.0  libwx_gtk3u_propgrid-3.2.so.0.2.0  libwx_gtk3u_qa-3.2.so.0  libwx_gtk3u_qa-3.2.so.0.2.0  libwx_gtk3u_ribbon-3.2.so.0  libwx_gtk3u_ribbon-3.2.so.0.2.0  libwx_gtk3u_richtext-3.2.so.0  libwx_gtk3u_richtext-3.2.so.0.2.0  libwx_gtk3u_stc-3.2.so.0  libwx_gtk3u_stc-3.2.so.0.2.0  libwx_gtk3u_xrc-3.2.so.0  libwx_gtk3u_xrc-3.2.so.0.2.0
wxWidgets-3.2.2/build_gtk/samples/: Makefile
wxWidgets-3.2.2/build_gtk/samples/animate/: Makefile
wxWidgets-3.2.2/build_gtk/samples/archive/: Makefile
wxWidgets-3.2.2/build_gtk/samples/artprov/: Makefile
wxWidgets-3.2.2/build_gtk/samples/aui/: Makefile
wxWidgets-3.2.2/build_gtk/samples/calendar/: Makefile
wxWidgets-3.2.2/build_gtk/samples/caret/: Makefile
wxWidgets-3.2.2/build_gtk/samples/clipboard/: Makefile
wxWidgets-3.2.2/build_gtk/samples/collpane/: Makefile
wxWidgets-3.2.2/build_gtk/samples/combo/: Makefile
wxWidgets-3.2.2/build_gtk/samples/config/: Makefile
wxWidgets-3.2.2/build_gtk/samples/console/: Makefile
wxWidgets-3.2.2/build_gtk/samples/dataview/: Makefile
wxWidgets-3.2.2/build_gtk/tests/: Makefile
(+89 files in other folders)
